--- a/package.json
+++ b/package.json
@@ -12,17 +12,16 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.36",
+    "@types/prop-types": "^15.7.5",
     "@types/react": "^18.2.13",
     "@types/react-dom": "^18.2.6",
     "axios": "^1.4.0",
-    "history": "^5.3.0",
-    "jsdoc": "^4.0.2",
     "prettier": "^2.8.8",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.0",
-    "react-router-dom": "^6.13.0",
+    "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
     "redux-saga": "^1.2.3",
     "sass": "^1.63.4",
